# citylife

./: .clang-format  .gitignore  .hgignore  .travis.yml  LICENSE  ReadMe.md  code_style  format.sh  gims.conf  install_build_dependencies.sh  makefile  meson.build  readme.md  sonar-project.properties
.github/workflows/: ci.yml
accounting/mockups/: compile.sh  lendings.html  transactions.html
accounting/mockups/style/: main.scss
auth/: Dockerfile  assert.h  authenticator.c  logger.c  logger.h  main.c  makefile  queue.h  requests_resolver.c  requests_resolver.h  requests_resolver_tests.c  server.c  server.h  server_tests.c  service.c
authenticator/: assert.c  assert.h  auth_verbs.c  auth_verbs.h  authenticator.c  authenticator.h  authenticator_tests.c  main.c  makefile  map.c  map.h  queue.c  queue.h  queue_tests.c  requests_resolver.c  requests_resolver_tests.c  server_tests.c  session_manager.h  test.c  test.h  unit_tests.c  worker_pool.c  worker_pool.h  worker_pool_tests.c
ci-scripts/: memory_leak_check.sh
eva/: Cargo.toml  makefile
eva-to-be-ported/gims/src/: tunasolver.cpp
eva-to-be-ported/gims/src/DBConnection/: DBConnection.hpp
eva-to-be-ported/gims/src/Geometry/: GIMSGeometry.cpp  LineString.cpp  lex.yy.c  wkt.l
eva-to-be-ported/gims/tests/: geometry.cpp~  pointInPolygonTest.cpp
eva-to-be-ported/src/DataStructures/: avl.cpp
eva/gims/src/DataProcessor/: Balaban.hpp
eva/src/: SystemBase.hpp  conf.cpp  main.cpp
eva/src/DBConnection/: DBConnection.cpp
eva/src/DataProcessor/: Balaban.cpp  BentleySolver.hpp  LineIntersection.cpp  LineIntersection.hpp  LinePolygonIntersection.cpp  LinePolygonIntersection.hpp  PMQuadTree.cpp  PMQuadTree.hpp  PolygonIntersection.cpp
eva/src/Debugger/: DebRender.cpp  DebRender.hpp
eva/src/Geometry/: BoundingBox.cpp  Geometry.hpp  GeometryCollection.cpp  MBNgon.cpp  Polygon.cpp  y.tab.h
gateway/: Dockerfile  makefile  pom.xml
gateway/src/main/resources/: logback.xml
jervicectl/: pom.xml
jervicectl/testConfigs/: big.cfg
legacy/auth/: auth_verbs.c  auth_verbs.h  authenticator.c  authenticator.h  authenticator_tests.c  example_service_registration.json  main.c  requests_resolver.c  requests_resolver.h  requests_resolver_tests.c  service.c  service.h  service_tests.c
legacy/eva/: ReadMe.md
legacy/eva-to-be-ported/gims/src/: SystemBase.hpp  conf.cpp  conf.hpp  main.cpp  tunasolver.cpp  tunasolver.hpp
legacy/eva-to-be-ported/gims/tests/: pointInPolygonTest.cpp
legacy/eva-to-be-ported/src/DataStructures/: avl.cpp  avl.hpp
legacy/eva/src/DataStructures/: avl.hpp
legacy/gateway/: pom.xml
legacy/mockups/: overview.html
legacy/seq-align/: .gitignore  bench.py  in_gen.py  notes
legacy/seq-align/common/: seq_align.c  seq_align.h
legacy/seq-align/hirschberg/single_objective/: makefile  solver.c
legacy/seq-align/problems/: 5_8.in  8_5.in  hello.in  reg_1.in  reg_2.in  wikipedia.in  writer.in
legacy/service-ctl/: pom.xml
pyauth/: cqrs.py
service-ctl/: pom.xml
src/: SystemBase.hpp  conf.cpp  conf.hpp  main.cpp  makefile  tunasolver.cpp
src/DBConnection/: DBConnection.cpp  DBConnection.hpp
src/DataProcessor/: Algos.hpp  Balaban.hpp  BentleySolver.cpp  BentleySolver.hpp  DCEL.cpp  DCEL.hpp  DE9IM.cpp  DE9IM.hpp  DataStructs.cpp  DataStructs.hpp  Index.hpp  JobManager.hpp  LineIntersection.cpp  PMQuadTree.cpp  PMQuadTree.cpp~  PMQuadTree.hpp  PolygonIntersection.cpp  PolygonIntersection.hpp  avl.cpp  avl.hpp
src/Debugger/: DebRender.cpp  DebRender.hpp
src/Geometry/: Approximation.cpp  BentleySolver.cpp  BentleySolver.hpp  BoundingBox.cpp  BoundingBox.hpp  Edge.cpp  Edge.hpp  EdgeList.cpp  EdgeList.hpp  GIMSGeometry.cpp  GIMSGeometry.hpp  Geometry.hpp  GeometryCollection.cpp  GeometryCollection.hpp  GeometryList.cpp  GeometryList.hpp  LineString.cpp  LineString.hpp  MBR.cpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  lex.yy.c  main.c  makefile  wkt.l  wkt.y  y.tab.c  y.tab.h
src/PG2OGR/Geometry/: Connect2Postgis.cpp  Connect2Postgis.h
src/PG2OGR/Helper/: PGConnection.cpp  PGConnection.h
src/PG2OGR/OSM/: OSMLineLayer.cpp  OSMLineLayer.h  OSMPointLayer.cpp  OSMPointLayer.h  OSMPolygonLayer.cpp  OSMPolygonLayer.h  OSMRoadsLayer.cpp  OSMRoadsLayer.h  Table.cpp  Table.h
src/base-libs/algorithms/bigint/: bigint.c
src/base-libs/data_structures/: avl.c  dynarray.c  heap.c  heap_checks.c  heap_rank.c  heap_transformations.c  list.c  map.c  queue.c
src/base-libs/data_structures/hashmap/: map.c  map_tests.c
src/base-libs/geometry/: constructors.c
src/core-libs/datatypes/: varchar.c
src/core-libs/eventstore/: event.c  eventindex.h  eventschema.c  eventstore.c  eventstore.h
src/data_structures/: PMQuadTree.cpp  PMQuadTree.hpp
src/libs/: makefile
src/libs/bigint/: bigint.c  bigint.h  bigint_tests.c  makefile
src/libs/config/: config.c  config.h  config_tests.c  makefile
src/libs/ctest/: assert.c  assert.h  makefile  test.c  test.h
src/libs/hashmap/: makefile  map.c  map.h  map_tests.c
src/libs/jasmine/: jsmn.c  makefile
src/libs/list/: list.c  list.h  list_tests.c
src/libs/logger/: logger.c
src/libs/queue/: queue.c  queue.h  queue_tests.c
src/libs/server/: server.c  server.h  server_tests.c
src/libs/storage/: append_list.h
src/libs/workerpool/: worker_pool.h  worker_pool_tests.c
src/services/auth/: auth_verbs.c  auth_verbs.h  authenticator.c  authenticator.h  authenticator_tests.c  main.c  makefile  requests_resolver.c  requests_resolver.h  requests_resolver_tests.c  service.c  service_tests.c
src/services/gateway/: main.c  service.c  service.h
test/_resources/gateway/: valid_service_registration_request.json
test/_resources/json/: valid_json_dictionaries.json
test/base-libs/data_structures/: heap_tests.c  list_tests.c  queue_tests.c
test/core-libs/: eventstore_tests.c
test/core-libs/eventstore/: eventstore_tests.c
test/services/auth/: authenticator_tests.c  requests_resolver_tests.c  service_tests.c
test/services/gateway/: service_tests.c
tests/: PMQuadTreeTest.cpp  pointInPolygonTest.cpp
tests/cases/ptInsidePol/: outputGen.py
(+186 files in other folders)
